# overcooked-reproduction

./: .gitignore  JAX_VS_TENSORFLOW_DIFFERENCES.md
human_aware_rl_jax_lift/: README.md  __init__.py  config.py  paper_config.yaml  pyproject.toml
human_aware_rl_jax_lift/agents/: __init__.py
human_aware_rl_jax_lift/agents/bc/: __init__.py  agent.py  model.py  train.py
human_aware_rl_jax_lift/agents/pbt/: __init__.py  config.py  trainer.py
human_aware_rl_jax_lift/agents/ppo/: __init__.py  config.py  model.py  train.py
human_aware_rl_jax_lift/data/bc_runs_fig6/: best_bc_model_paths.pkl
human_aware_rl_jax_lift/docs/: porting_map.md
human_aware_rl_jax_lift/encoding/: __init__.py  bc_features.py  ppo_masks.py
human_aware_rl_jax_lift/env/: __init__.py  collisions.py  compat.py  interactions.py  layouts.py  overcooked_mdp.py  reward_shaping.py  state.py  vec_env.py
human_aware_rl_jax_lift/experiments/: __init__.py  common.py  eval_figure4a_inner.py  figure4.py  figure4a.py  figure5.py  figure6.py  figure7.py  prepare_results.py  results_figure4a.json  run_eval_figure4a.sh
human_aware_rl_jax_lift/experiments/eval_results/: results_random0.json  results_random1.json  results_random3.json  results_raw_random0.json  results_raw_random1.json  results_raw_random3.json  results_simple.json  (+3 more)
human_aware_rl_jax_lift/planning/: __init__.py  adapter.py  heuristic.py  medium_level.py  motion_planner.py  search.py
human_aware_rl_jax_lift/reproducibility/: commands.md  determinism.md  paper_hparams.py  seed.py
human_aware_rl_jax_lift/scripts/: analyze_sweep_stage1.py  compare_tf_jax_minibatch.py  plot_ppo_sp_eprewmean.py  prepare_bc_data.py  smoke_test_vec_env_jax.py  train_bc.py  train_pbt.py  train_ppo_bc.py  train_ppo_sp.py
human_aware_rl_jax_lift/slurm/: 00_prepare_bc_data.slurm  01_bc.slurm  01b_bc_fig6.slurm  02_ppo_sp.slurm  02b_plot_figure8.slurm  03_ppo_bc.slurm  03b_plot_figure9.slurm  04_pbt.slurm  05_eval_figure4a.slurm  05b_plot_figure4a.slurm  README.md  ablation_grad_clip.slurm  bisect_py_runner.slurm  parity_bc_data_tf_vs_jax.sbatch  run_jax_sweep_stage1.slurm  run_lr_vf_grid_simple.slurm  run_parity_tests.slurm  submit_all.sh  validate_jax.slurm  validate_jax_fix_p0.slurm  validate_jax_full.slurm  validate_jax_long.slurm
human_aware_rl_jax_lift/tests/: __init__.py  debug_step188.py  debug_step37.py  run_parity_tests.py  test_bc_feature_parity.py  test_decisive_parity.py  test_e2e_figures.py  test_encoding_parity.py  test_env_equivalence.py  test_model_io.py  test_paper_hparams_lock.py
human_aware_rl_jax_lift/training/: __init__.py  checkpoints.py  partners.py  pbt_run.py  ppo_run.py  ppo_run_jax.py  runner.py  runner_jax.py  vec_env.py  vec_env_jax.py
overcooked_ai-master/: .gitignore  MIT_CLUSTER_INSTRUCTIONS.md  README.md  pyproject.toml  requirements-gpu.txt  requirements.MAL_backup.txt  requirements.txt  run4_results.json
overcooked_ai-master/hpc_scripts/: README.md  config.sh  run_baselines_identity_checks.sh  run_checkpoint_eval_parity.sh  run_rollout_parity.sh  submit_all.sh  submit_cliprange_ablation.sh  submit_rollout_parity.sh
overcooked_ai-master/models/: README.md  ppo_sp_evaluation_results.pkl
overcooked_ai-master/scripts/: download_ec2_results.sh  setup_ec2.sh  slurm-44420144.out  train_all.sh  train_all_fast.sh  train_bc.sh  train_ec2.sh  train_ppl.sh  train_ppl_all_layouts.sh  train_ppo_bc.sh  train_ppo_sp.sh
overcooked_ai-master/src/: imitation.sh  ppo_bc.sh  ppo_sp.sh  slurm-44420145.out  slurm-44420146.out  slurm-44420147.out
(+2278 files in other folders)
