[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "overcooked_ai"
version = "2.0.0"
description = "Cooperative multi-agent environment based on Overcooked"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Micah Carroll", email = "mdc@berkeley.edu" }]
urls = { homepage = "https://github.com/HumanCompatibleAI/overcooked_ai" }
keywords = ["Overcooked", "AI", "Reinforcement Learning"]
dependencies = [
    "dill",
    "gymnasium",
    "ipywidgets",
    "numpy",
    "opencv-python",
    "pandas",
    "pygame",
    "scipy",
    "setuptools>=77.0.3",
    "tqdm",
]

[project.optional-dependencies]
# PyTorch-based Behavior Cloning
bc = [
    "torch>=2.0",
    "tensorboard>=2.14",
]

# JAX-based RL training
jax = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "flax>=0.8",
    "optax>=0.2",
]

# JAX with CUDA support
jax-cuda = [
    "jax[cuda12]>=0.4",
    "flax>=0.8",
    "optax>=0.2",
]

# Full human-aware RL stack (recommended)
harl = [
    "torch>=2.0",
    "tensorboard>=2.14",
    "jax>=0.4",
    "jaxlib>=0.4",
    "flax>=0.8",
    "optax>=0.2",
    "wandb",
    "sacred",
    "ipykernel",
    "matplotlib",
    "seaborn",
]

# Full stack with CUDA support
harl-cuda = [
    "torch>=2.0",
    "tensorboard>=2.14",
    "jax[cuda12]>=0.4",
    "flax>=0.8",
    "optax>=0.2",
    "wandb",
    "sacred",
    "ipykernel",
    "matplotlib",
    "seaborn",
]

# Legacy TensorFlow/RLlib dependencies (deprecated)
harl-legacy = [
    "ipykernel",
    "ray[rllib,tune]==2.2",
    "dm-tree",
    "lz4",
    "tensorflow[and-cuda]==2.19.0",
    "wandb",
    "gym",
]

[project.scripts]
overcooked-demo-up = "overcooked_demo:start_server"
overcooked-demo-move = "overcooked_demo:move_agent"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"overcooked_ai_py" = [
    "data/layouts/*.layout",
    "data/planners/*.py",
    "data/graphics/*.png",
    "data/graphics/*.json",
    "data/fonts/*.ttf",
]
"human_aware_rl" = [
    "static/**/*.pickle",
    "static/**/*.csv",
    "ppo/trained_example/*.pkl",
    "ppo/trained_example/*.json",
    "ppo/trained_example/*/.is_checkpoint",
    "ppo/trained_example/*/.tune_metadata",
    "ppo/trained_example/*/checkpoint-500",
]
